fixed for CHLK-2629 Student Alert Icon > Show only on Student Profile

--- a/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
@@ -20,7 +20,7 @@ mixin ProfileInfoView(model)
     .info-view
         .title
             div(style="overflow: visible").avatar-container.with-border
-                +PersonImg(model, 128)
+                +PersonImg(model, 128, true)
             h1=model.getFullName()
         .sections
             .sections-info
@@ -62,7 +62,7 @@ mixin ProfileInfoForm(controller, submitAction, pictureUploadAction,  model)
             .title
                 .avatar-block
                     div(style="overflow: visible").avatar-container.with-border
-                        +PersonImg(model, 128)
+                        +PersonImg(model, 128, true)
                     //button(type="button").simple-gray-button.file Upload
                         +FileUpload(controller, pictureUploadAction, [model.getId().valueOf()])#add-attachment.simple-gray-button
                 .name-block
