--- a/Chalkable.Web/assets/jade/activities/profile/SchoolPersonProfileSummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchoolPersonProfileSummaryView.jade
@@ -6,7 +6,7 @@ user = self.getUser()
         #top-summary-panel
             #avatar-photo-conainer
                 .img-container
-                    +PersonImg(user, 256)
+                    +PersonImg(user, 256, true)
                     .grades-container
             #student-info-panel
                 h1.display-name=user.getDisplayName() || user.getFullName()
