--- a/Chalkable.Web/assets/jade/activities/student/StudentProfileDisciplineView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/StudentProfileDisciplineView.jade
@@ -24,7 +24,7 @@ personId = summaryInfo.getId()
                 .person-info.standard-short-info
                     .avarar-container.standard-small-container
                         .img-container
-                            +PersonImg(summaryInfo, 64)
+                            +PersonImg(summaryInfo, 64, true)
                     h1.profile-person-name=summaryInfo.getDisplayName()
                     label=summaryInfo.getSummary()
                 h2.mp-conteiner.profile-drop-down-container
