--- a/Chalkable.Web/assets/jade/controls/image.jade
+++ b/Chalkable.Web/assets/jade/controls/image.jade
@@ -2,12 +2,12 @@ mixin Image()
     -attributes = self.processAttrs(attributes);
     img(attributes)
 
-mixin PersonImg(person, size, noAlerts)
+mixin PersonImg(person, size, needAlerts)
     if(person && person.getGender())
         src = chlk.templates.ChlkTemplate.prototype.getPictureURL(person.getId(), size, size)
         isWoman = person.getGender().toLowerCase() == 'f';
         alternativeHref = joinUrls(window.scriptsRoot, 'Content/avatars/' + size + '/.no-avatar') + (isWoman ? '-female' : '') + '.png';
-        p = !noAlerts && person.showAlerts() && self.canShowAlert(person)
+        p = needAlerts && person.showAlerts() && self.canShowAlert(person)
         div(style=p ? "overflow: visible" : "").avatar-wrapper
             if p
                 top = self.getAlertsAttributes(person)
