--- a/Chalkable.Web/assets/jade/activities/apps/app-screenshots.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-screenshots.jade
@@ -15,7 +15,7 @@ mixin ScreenshotUploadBox(title, dimsX, dimsY, screenshots)
         .upload-img-block
             .top=dimsX + "px x " + dimsY + "px"
             .bottom
-                button.simple-gray-button.file=title
+                div.simple-gray-button.file=title
                     +FileUpload('apps', 'uploadScreenshot', [screenshots.ids]).simple-gray-button
                 a(href=screenshots.templateDownloadLink).download-link Download Template
     +Hidden('appScreenshots', screenshots.ids)
