--- a/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
@@ -6,7 +6,7 @@ mixin MyAppsIconLink(app, editable)
 
             .app-list-item
                 .icon(class=editable ? "jiggly" : undefined)
-                    pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74)
+                    pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74, true)
                     img(src=pictureUrl)
                 .name=app.getName()
                 Button(type="submit").close-btn
