fixed app attachments

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -65,5 +65,5 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                         +AppAttachmentBlock(attachment, attachment.getThumbnailUrl(), i)
                 each app, i in self.getApplications()
                     +ActionLink('apps', 'viewApp', app.getUrl(), app.getGradingViewUrl(), chlk.models.apps.AppModes.GRADINGVIEW, app.getId()).announcement-item.application
-                        +AppAttachmentBlock(app, self.getPictureURL(app.getSmallPictureId(), 74, 74), i)
+                        +AppAttachmentBlock(app, self.getPictureURL(app.getSmallPictureId(), 74, 74, true), i)
 
