--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -73,7 +73,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     inCurrentMp: true
                 },
                 placeholder=Msg.Due_date,
-                class="validate[required]"
+                class='validate[required]'
             )#expiresdate
         if !isAdminAnnouncement
             .max-score-container
