fixed announcement change date

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -73,8 +73,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     inCurrentMp: true
                 },
                 placeholder=Msg.Due_date,
-                class='validate[required]',
-                disabled=announcement.isAbleChangeDate() ? undefined : 'disabled'
+                class='validate[required]'
             )#expiresdate
         if !isAdminAnnouncement
             .max-score-container
