--- a/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
@@ -3,7 +3,7 @@ input(type="hidden", name="start", value=(self.getStart() || 0))
 input(type="hidden", name="count", value=10)
 Button(type="submit", class="scroll-start-button x-hidden", name="submitType", value="scroll")
 +ListView(self.getUsers())(
-    selectedIndex = selectedIndex, infiniteScroll = true,
+    infiniteScroll = true,
     goTopButton = true, loadAllButtonTitle = 'LOAD ALL STUDENTS',
     loadAllPopUpTitle = 'Students',
     needGoToButton = true, needLoadAllButton = true).people-list
