added Settings button to Teacher profile

--- a/Chalkable.Web/assets/jade/activities/profile/school-person-info-page.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/school-person-info-page.jade
@@ -1,7 +1,6 @@
 .teacher-info.info-page.view-mode.loader-container
     .loader
-    -console.log(self.getUser())
-    +ProfileTopBar(self, 'info')
+    +UserProfileTopBar(self, 'info')
     +ProfileInfoView(self.getUser())
         //todo rewrite this
 
