fixed item content display in announcement view page

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
@@ -233,6 +233,9 @@ $red-color: #842727;
         font-size: 14px;
         word-spacing: -1px;
       }
+      p{
+        white-space: pre-wrap;
+      }
 
       .standards-container{
         .title{
