--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -399,7 +399,7 @@ BODY {
   }
 
   #page-header {
-    text-align:right;
+    text-align:left;
     color: #333;
     padding: 1px 7px;
     font-size: 12px;
