--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -60,6 +60,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                                     +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
                     .title=Msg.Click_to_add_standard
                     +ActionLink('announcement', 'showStandards', announcement.getAnnouncementTypeName(), announcement.getId(), classId).add-standards-btn.x-hidden
+        .drawer-icon
         .drop-down-container
         input(type="submit",id="list-last-button",value="listLast", name="submitType", class='x-hidden validate-skip')
         if !announcement.getState()
