--- a/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
@@ -143,7 +143,8 @@
 
         &.class-button{
           background-position: center top;
-          color: #b6b6b6;
+          text-shadow: 1px 1px 0 white;
+          color: #989898;
           text-decoration: none;
           position: relative;
           border: 3px solid #C9C9C9;
