--- a/Chalkable.Web/assets/sass/partials/main/messages/_add.scss
+++ b/Chalkable.Web/assets/sass/partials/main/messages/_add.scss
@@ -93,3 +93,9 @@
     background: url(images/private-messages/bottom-bg.png) 0 bottom no-repeat;
   }
 }
+
+.view-dialog{
+  .special-button{
+    width: 59px;
+  }
+}
