--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -7,7 +7,7 @@
         +ActionLink('announcement','add').fullwidth-button.add-new
         .buttons-row
             +ActionLink('calendar', 'month').one-third-button.calendar(title="View Calendar") Calendar
-            +ActionLink('message', 'page').one-third-button.messages(title="View Messages") Messages
+            +ActionLink('message', 'page', false, true).one-third-button.messages(title="View Messages") Messages
             +ActionLink('students', 'my').one-third-button.people(title="View People") People
         .buttons-row
             +ActionLink('grading', 'summary').one-third-button.statistic(title="View Grades") Grades
