--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -47,7 +47,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                                                 div
                                                     +PersonImg(owner, 24)
                                                 div
-                                                    +TextArea(name="comment").comment-input=item.getComment()
+                                                    +TextArea(name="comment", maxlength=500).comment-input=item.getComment()
                                                     .grading-comments-list
                                                     span.enter=Msg.Enter_when_done
                     div(id = "grade-container-" + item.getStudentInfo().getId()).i-b.grade-block
