--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -72,5 +72,5 @@ redirectData = self.getRedirectData()
                             .discipline-desciption-container
                                 .title Occurrence Note:
                                 .notes-area-container
-                                    textarea(name='description', readonly=self.isAblePostDiscipline() && self.getSelectedTypeIds(item) ? undefined : "readonly").notes-area.change-discipline=item.getDescription()
+                                    textarea(name='description', disabled=self.isAblePostDiscipline() && self.getSelectedTypeIds(item) ? undefined : "disabled").notes-area.change-discipline=item.getDescription()
 
