--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -7,7 +7,7 @@ each item, i in self.getItems()
             +PersonImg(item, 47)
         p.left= item.getFullName()
         .right
-            +ActionLinkButton('message', 'sendToPerson', item.getId(), item.getFirstName(), item.getLastName()).message-button.blue-gradient-btn Message
+            +ActionLinkButton('message', 'sendToPerson', null, item.getId(), item.getFirstName(), item.getLastName()).message-button.blue-gradient-btn Message
         .clear
 
 
