--- a/Chalkable.Web/assets/jade/activities/grading/GradingInput.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingInput.jade
@@ -12,7 +12,7 @@ normalValue = self.getModel().getNormalValue()
         if self.isAbleDropStudentScore()
             +LabeledCheckbox(Msg.Drop, 'dropped', self.isDropped())(data-value=self.isDropped(), addCallBack = true).with-value.dropped-checkbox
         else
-            +Hidden('dropped', self.isDropped())
+            +Hidden('dropped', false)
         +LabeledCheckbox(Msg.Late, 'islate', self.isLate())(data-value=self.isLate(), addCallBack = true).with-value
         +LabeledCheckbox(Msg.Incomplete, 'isincomplete', self.isIncomplete())(data-value=self.isIncomplete(), addCallBack = true).with-value
         if self.isAbleExemptStudentScore()
