fixed for Search feature: Long search results are not wrapping but instead running outside the search box.   This is occurring in both the listed results and the actual search field.

--- a/Chalkable.Web/assets/sass/partials/_sidebar.scss
+++ b/Chalkable.Web/assets/sass/partials/_sidebar.scss
@@ -68,6 +68,7 @@ BODY {
               position: absolute;
               top: 21px;
               left: 29px;
+              width: 130px;
 
               background: transparent;
               border: none;
