updated Post Grades procedure

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -76,7 +76,7 @@ mixin DisplayTotalPoints(model)
         .student-name
             .dotted-h=Msg.Avg
             if self.getGradingPeriod().isAblePostGradeBook()
-                +ActionLinkButton('grading','postGradeBook', self.getClassId(), self.getGradingPeriod().getId()).message-button.blue-gradient-btn.post-gradebook-button Post
+                +ActionLinkButton('grading','postGradeBook', self.getClassId(), self.getGradingPeriod().getId(), self.getStandardId(), self.getCategoryId()).message-button.blue-gradient-btn.post-gradebook-button Post
     +LeftRightToolbar()(
         needDots = true,
         roundedDots = true,
