--- a/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
+++ b/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
@@ -692,6 +692,7 @@ BODY {
                           height: 40px;
                           position: relative;
                           text-shadow: #415a67 1px 1px 1px;
+                          width: 91px;
 
                           P{
                             display: block;
