--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -541,6 +541,20 @@ TEXTAREA.animated-textarea{
     @include background(linear-gradient(top, #e5e5e5, #d0d0d0));
   }
 
+  &.blue-on-active{
+    &:hover, &.pressed{
+      @include box-shadow(0 1px 2px 0px #999);
+      @include background(linear-gradient(top, #265f75, #3688a4));
+      color: white !important;
+      text-shadow: none;
+
+      a{
+        color: white !important;
+        text-shadow: none !important;
+      }
+    }
+  }
+
   &.disabled{
     @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
    
