fixed for Teacher Calendar: Activity category description is is on the same line as the calendar day.

--- a/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
+++ b/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
@@ -546,6 +546,7 @@ BODY {
                         letter-spacing: -1px;
                         overflow: hidden;
                         text-overflow: ellipsis;
+                        white-space: nowrap;
                       }
 
                       &.calendar-items{
