fixed user list text

--- a/Chalkable.Web/assets/jade/activities/people/UsersList.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersList.jade
@@ -17,7 +17,8 @@
     .grid-container.loader-container
         +RenderWith(self.getModel(), chlk.templates.people.UsersGridTpl)(
             userRole = self.getUserRole(),
-            currentUser = self.getCurrentUser()
+            currentUser = self.getCurrentUser(),
+            rolesText = self.getRoleText()
         )
 
 
