--- a/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersGrid.jade
@@ -4,8 +4,8 @@ input(type="hidden", name="count", value=10)
 Button(type="submit", class="scroll-start-button x-hidden", name="submitType", value="scroll")
 +ListView(self.getUsers())(
     infiniteScroll = true,
-    goTopButton = true, loadAllButtonTitle = 'LOAD ALL STUDENTS',
-    loadAllPopUpTitle = 'Students',
+    goTopButton = true, loadAllButtonTitle = 'LOAD ALL ' + self.getRolesText().toUpperCase(),
+    loadAllPopUpTitle = self.getRolesText(),
     needGoToButton = true, needLoadAllButton = true).people-list
     +RenderWith(self.getUsers(), chlk.templates.people.UsersForGridTpl)(
         userRole = self.getUserRole(),
